[project]
name = "voice-form-backend"
version = "0.1.0"
description = "FastAPI backend for voice form uploads"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.0",

  # IMPORTANTE: usar psycopg2-binary, no psycopg
  "psycopg2-binary>=2.9.9"
]

[tool.uvicorn]
factory = false

# Opcional pero recomendado si usás uv
[tool.uv]
dev-dependencies = [
  "black",
  "ruff"
]